<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popupbg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/des"
        android:src="@drawable/popupbgimg" />

    <View
        android:id="@+id/btm_view"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btm_view"
        android:layout_below="@+id/imageView1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/whiterectangle"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_emergency_contact" />

                <LinearLayout
                    android:layout_width="280dp"
                    android:layout_height="50dip"
                    android:layout_margin="10dip"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/bt_no"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btcancelrectangle"
                        android:text="@string/no"
                        android:textColor="#9955E1" />

                    <Button
                        android:id="@+id/bt_yes"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btcaddrectangle"
                        android:text="@string/yes"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>