<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/addpic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:context=".Main" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/_will_be_initiated_in_"
            android:textSize="25sp"
            tools:ignore="HardcodedText" /> 

        <fragment
            android:id="@+id/fragment1"
            android:name="com.epicelements.spotnsave.ViewAddressDialog"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp" />

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:scaleType="centerInside"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/_10"
            android:textColor="@color/holo_dark_green"
            android:textSize="100sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:text="@string/cancel"
            android:textColor="@color/holo_dark_green"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</ScrollView>