<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btm_view" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/des"
            android:src="@drawable/drawable_contact_default_icon" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_emergency_contact"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_activaet"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_bg"
            android:padding="10dp"
            android:text="@string/add_from_phonebook"
            android:textAllCaps="true"
            android:textColor="@color/primary_color" />
        <!-- <RelativeLayout -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginTop="10dp" > -->


        <!-- <ImageView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:contentDescription="@string/des" -->
        <!-- android:src="@drawable/emergencyprofileicon" /> -->


        <!-- <com.makeramen.RoundedImageView -->
        <!-- android:id="@+id/im_shadow" -->
        <!-- android:layout_width="60dp" -->
        <!-- android:layout_height="60dp" -->
        <!-- android:layout_centerInParent="true" -->
        <!-- android:contentDescription="@string/des" /> -->
        <!-- </RelativeLayout> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="Full Name" />

        <EditText
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_edit"
            android:gravity="center_vertical"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="Country" />

        <EditText
            android:id="@+id/ed_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="2dp"
            android:drawableRight="@drawable/ic_edit"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="Phone Number (must include country code)" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_edit"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="50dip"
            android:layout_margin="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btcancelrectangle"
                android:text="@string/cancel"
                android:textColor="#9955E1"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_add_contact"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/theme_bg"
                android:text="@string/add_contact"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- <View -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="30dp" /> -->
    </LinearLayout>

</ScrollView>