<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/im_reg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/des" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/des"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/im_cam"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="105dp"
                android:contentDescription="@string/des"
                android:src="@drawable/pic_frame" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/des"
                android:src="@drawable/demo_pic" />

            <com.makeramen.RoundedImageView
                android:id="@+id/im_shadow"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="107dp"
                android:contentDescription="@string/des" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_shadow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/profile_picture"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/rel2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/bt_mr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/male" />

                <ImageView
                    android:id="@+id/bt_ms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/female_pushed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/txtaddrectangle"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/txtaddrectangle"
                android:gravity="center_vertical" >

                <AutoCompleteTextView
                    android:id="@+id/ed_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/txtaddrectangle"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/bt_activaet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/activate"
                android:textColor="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>